select2 heights and alignment fixed

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -773,18 +773,16 @@ span.private {
   -moz-border-radius: 3px;
 }
 
-input.main-form-button
-  {
+input.main-form-button {
   font-size: 16pt;
-  }
-
-.select2-choices {
-background-image: none !important;
-border: 1px solid #CCC !important;
 }
 
-.select2-container-multi .select2-choices .select2-search-choice
-  {
+.select2-choices {
+  background-image: none !important;
+  border: 1px solid #CCC !important;
+}
+
+.select2-container-multi .select2-choices .select2-search-choice {
   margin: 3px 0 3px 3px !important;
   border: 1px solid #CCC !important;
   -webkit-border-radius: 0px !important;
@@ -792,8 +790,18 @@ border: 1px solid #CCC !important;
   border-radius: 0px !important;
   -webkit-box-shadow: none !important;
   box-shadow:  none !important;
-  }
+}
+
+li.select2-search-choice > div {
+  margin-bottom: -1px;
+}
 
 .select2-drop-active {
-border: 1px solid #CCC !important;
-border-top: 1px solid #CCC !important;
+  border: 1px solid #CCC !important;
+  border-top: 1px solid #CCC !important;
+}
+
+.select2-search-choice-close {
+  top: 3px !important;
+  height: 12px !important;
+}
